--- a/smurfs/src/index.css
+++ b/smurfs/src/index.css
@@ -1,5 +1,9 @@
+html,
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
 }
